--- a/.gitignore
+++ b/.gitignore
@@ -4,15 +4,4 @@
 .vscode
 build
 compile_commands.json
-doxygen/doc
-
-# Devenv
-.devenv*
-devenv.local.nix
-
-# direnv
-.direnv
-
-# pre-commit
-.pre-commit-config.yaml
-
+doc/doxygen/
